# LMSApplication

./: main.py  pyproject.toml
api/: courses.py  sections.py  users.py
env1/: pyvenv.cfg
env1/Scripts/: activate  activate.bat
env2/: pyvenv.cfg
env2/Scripts/: activate  activate.bat
