[tool.poetry]
name = "mlweb"
version = "0.1.0"
description = ""
authors = ["Kibogora <kibogora.nsoro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
